--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <title>React App</title>
+    <title>Game of Life</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
